# vekt_test

./: .gitignore  CMakeLists.txt  My_area.cpp  My_area.h  My_window.cpp  My_window.h  My_worker.cpp  My_worker.h  README.md  main.cpp
